public/stylesheets/default.css
/* ... */
#projecttabs ul li {
	float: left;
	list-style-image: none;
	list-style-position: outside;
	list-style-type: none;
	text-align: center;
	padding-top: 6px;
	width: 111px;
	height: 26px;
}

#projecttabs ul li a, #projecttabs ul li span {
	text-decoration: none;
	font-size: 12px;
	color: #FFFFFF;
}

#projecttabs ul.yellow li {
	background-color: #FF9900;
	border-right: 1px solid #FFFFFF;
}

#projecttabs ul.yellow li.current {
	border-top: 2px solid #FF9900;
	background-color: #FFFFFF;
}

#projecttabs ul.yellow li.current span {
	width: 111px;
	color: #FF9900;
	text-align: center;
}

/* ********* Project Tabs ************* */

#editprofiletabs {
	width: 775px;
	height: 32px;
	margin-bottom: 20px;
}

#person_password_confirmation {
	width: 300px;
}

#editprofiletabs {
	width: 775px;
	height: 32px;
	margin-bottom: 20px;
}

#editprofiletabs ul {
	width: 775px;
	height: 32px;
	background-color: #FF9900;
	margin: 0 0 20 0;
	padding: 0 0 0 0;
}

/* *********Contact Requests********** */

#requests {
	background-color: white;
	border-top: 2px solid #FF9900;
	border-left: 1px solid #DDDDDD;
	border-right: 1px solid #DDDDDD;
	width: 765px;
	padding-top: 20px;
	padding-left: 10px;
}

#requests .contact_request {
	padding-right: 40px;
	padding-bottom: 20px;
}

#editprofiletabs ul {
	width: 775px;
	height: 32px;
	background-color: #FF9900;
	margin: 0 0 20 0;
	padding: 0 0 0 0;
}


#editprofiletabs ul li a, #projecttabs ul li span {
	text-decoration: none;
	font-size: 12px;
	color: #FFFFFF;
}

#editprofiletabs ul li {
	float: left;
	list-style-image: none;
	list-style-position: outside;
	list-style-type: none;
	text-align: center;
	padding-top: 6px;
	width: 130px;
	height: 26px;
}

/* *********People page********** */

#people {
	width: 775px;
	background-color: white;
	border-left: 1px solid #DDDDDD;
	border-right: 1px solid #DDDDDD;
}

#people table#list_people {
	border-spacing: 5px 5px;
}

#people table#list_people td {
	vertical-align: top;
	font-size: 8pt;
	padding-bottom: 10px;
	width: 195px;
	height: 80px;
	border-collapse: separate;
}

#people table#list_people td img {
	float: left;
	margin-right: 5px;
}

#people table#list_people td p {
	font-size: 7pt;
	margin: 0;
	margin-top: 2px;
}

#people table#list_people td a {
	color: #009900;
	text-decoration: none;
}

#people table#list_people td table {
	border-collapse: collapse;
	height: 80px;
}

#people table#list_people td table td {
	padding: 0;
	height: 5px;
}

#people table#list_people td table .person_thumb {
	width: 90px;
}

#people table#list_people td table .person_skill {
	vertical-align: bottom;
}

#people table#list_people td table .add_cell {
	vertical-align: bottom;
}

#people table#list_people td table .add_cell a {
	color: #009900;
	text-decoration: none;
}

#people table#list_people td table .count_common {
	vertical-align: bottom;
}

#editprofiletabs ul li a, #projecttabs ul li span {
	text-decoration: none;
	font-size: 12px;
	color: #FFFFFF;
}

#editprofiletabs ul.yellow li {
	background-color: #FF9900;
	border-right: 1px solid #FFFFFF;
}

#editprofiletabs ul.yellow li.current {
	border-top: 2px solid #FF9900;
	background-color: #FFFFFF;
}

#editprofiletabs ul.yellow li.current span {
	width: 111px;
	color: #FF9900;
	text-align: center;
}

/* *********Pagination display********** */

.paginate {
	text-align: right;
	font-size: 9pt;
	color: #009900;
}

.paginate a {
	color: #333333;
	text-decoration: none;
}

.paginate .next {
	color: #009900;
}

.paginate .prev {
	color: #009900;
}

/* *********Profile right column********** */

/*#right {
	float: right;
	margin-right: 12px;
}*/

.profile_right_column {
	width: 188px;
	margin-left: 5px;
	text-align: right;
}

.profile_right_column h4 {
	text-align: right;
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

.profile_right_column a {
	color: #333333;
	text-decoration: none;
}

.profile_right_column #description_content {
	background-color: white;
	border-top: 2px solid #009900;
	width: 188px;
	padding-bottom: 5px;
}

.profile_right_column #description_content p {
	text-align: right;
	margin: 5px;
	font-size: 9pt;
}

.profile_right_column #description_content p:first-letter {
	margin-left: 20px;
}

.profile_right_column .column_content {
	background-color: white;
	border-top: 2px solid #009900;
	width: 188px;
	padding-bottom: 5px;
}

.profile_right_column .column_content #p_status {
	margin-top: 5px;
}

.profile_right_column .column_content p {
	text-align: right;
	margin: 5px;
	font-size: 9pt;
}

.profile_right_column .column_content #cv {
	text-align: center;
	font-size: 9pt;
	margin-bottom: 15px;
}

.profile_right_column .column_content #cv img {
	margin-right: 10px;
}

.profile_right_column .column_content img {
	margin-top: 5px;
	margin-right: 5px;
}

.profile_right_column .column_content .profile_edit {
	border-top: 1px dotted #333333;
	margin: 5px;
}

.profile_right_column .add {
	text-align: center;
	margin-top: 15px;
	margin-bottom: 10px;
}

.profile_right_column .add a {
	margin-top: 5px;
	font-size: 9pt;
	color: #333333;
}

/* *********Recent Activity*********** */

#feed_requests {
	width: 777px;
}

#feed_requests #minifeeds {
	text-align: right;
	width: 580px;
}

#feed_requests #minifeeds h4 {
	color: #009900;
	font-size: 10pt;
	font-weight: normal;
	margin: 0;
}

#feed_requests #minifeeds .list_feed {
	background-color: white;
	width: 580px;
	margin-bottom: 20px;
	padding-top: 20px;
}

#feed_requests #minifeeds .list_feed table {
	width: 580px;
	height: 36px;
}

#feed_requests #minifeeds .list_feed table td.thumb {
	width: 36px;
	vertical-align: middle;
}

#feed_requests #minifeeds .list_feed table td {
	vertical-align: top;
	padding-bottom: 10px;
	padding-left: 5px;
}

#feed_requests #minifeeds .list_feed table td p {
	margin: 0;
	font-size: 10pt;
}

#feed_requests #minifeeds .list_feed table td p a {
	color: #009900;
	text-decoration: none;
}
/* ... */

